--- a/style.css
+++ b/style.css
@@ -1,26 +1,36 @@
 body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100vh;
+  height: 100vh;
   background-image: url("./exterior/forest_background.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  position: relative;
 }
 
 h2 {
-  font-size: 60px;
+  font-size: 6vw;
   font-family: "Wonder Boy In Monster World", sans-serif;
   text-align: center;
   color: #ffe4c4;
-  padding: 60px;
+  padding: 6vw;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 #libraryBuilding {
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 20%;
-  width: auto;
-  max-width: 80%;
+  bottom: 20vh;
+  width: 80%;
+  max-width: 800px;
   text-align: center;
 }
 #libraryBuilding img {
@@ -30,8 +40,6 @@ h2 {
 
 #treebeard {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100px;
   height: 100px;
   background-image: url("Ent_Idle_1.png");
@@ -39,37 +47,3 @@ h2 {
   background-size: contain;
   transition: all 0.2s ease-in-out;
 }
-
-/* @keyframes idle-animation {
-  0%,
-  100% {
-    background-image: url("Ent_Idle_1.png");
-  }
-  25% {
-    background-image: url("Ent_Idle_2.png");
-  }
-  50% {
-    background-image: url("Ent_Idle_3.png");
-  }
-  75% {
-    background-image: url("Ent_Idle_4.png");
-  }
-}
-
-@keyframes walk-animation {
-  0% {
-    background-image: url("Ent_Walk_1.png");
-  }
-  25% {
-    background-image: url("Ent_Walk_2.png");
-  }
-  50% {
-    background-image: url("Ent_Walk_3.png");
-  }
-  75% {
-    background-image: url("Ent_Walk_4.png");
-  }
-  100% {
-    background-image: url("Ent_Walk_1.png");
-  }
-} */
